athena/ntfy/overlays/development/stateful.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: ntfy-stateful
  labels:
    app: ntfy-stateful
spec:
  template:
    spec:
      containers:
        - name: ntfy 
          image: binwiederhier/ntfy:v2.11.0
          args: ["serve"]
          resources:
            limits:
              memory: 300Mi
              cpu:  200m
            requests:
                  cpu: 150m
                  memory: 150Mi
